fixed github icon too close to the right

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -23,7 +23,7 @@
   height:20px;
   color:white;
   margin-left:16px;
-  margin-right:0;
+  margin-right:28px;
   border-radius:100%;  
   text-align:right;  
   list-style:none;
